# wxHealthRecords

./: .gitignore  CMakeLists.txt  README.md  cmake__  suppressions.txt
Bundle/: Application.rc  Info.plist  icon.icns  wns.hpp
Depends/: CMakeLists.txt
Depends/wxWidgets/: CMakeLists.txt
Sources/: main.cpp
Sources/Common/: CommonApple.hpp
Sources/Controls/: ActionButton.cpp  ActionButton.hpp  NavigationButton.cpp  NavigationButton.hpp  StaticText.cpp  StaticText.hpp
Sources/Controls/Private/: StaticText.cpp  StaticText.hpp
Sources/FontAwesome/: FontAwesomeHandler.cpp  FontAwesomeHandler.h  FontAwesomeHandler.hpp  Fontawesome.hpp
Sources/Frames/: MainFrame.cpp  MainFrame.hpp
Sources/Panels/: CommandPanel.cpp  CommandPanel.hpp  FontHandler.cpp  FontHandler.h  Fontawesome.hpp
Sources/Resources/: windowsNavigationStart.hpp
Sources/SoundEffects/: SoundEffects.cpp  SoundEffects.hpp  SoundEffectsCommon.hpp  SoundEffectsImpl.cpp  SoundEffectsImpl.hpp  SoundEffectsImplApple.cpp  SoundEffectsImplApple.hpp
cmake/: CPM.cmake  Flags.cmake  MacOs.cmake  Unix.cmake  Vars.cmake  Windows.cmake
